<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/email" />
        <EditText
            android:id="@+id/edittext_nombre_apellido"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:inputType="text"
            android:hint="@string/nombre_apellido"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/key1" />

        <EditText
            android:id="@+id/edittext_contrasenia"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:hint="@string/contrasenia"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/button_ingresar"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/ingresar"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/notienescuenta" />
        <TextView
            android:id="@+id/textview_registrate"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="5dp"
            android:textStyle="bold"
            android:text="@string/Registrate" />
    </LinearLayout>


</LinearLayout>



